--- a/Index.html
+++ b/Index.html
@@ -118,7 +118,7 @@
             <li><a href="http://127.0.0.1:5000/me">About Me</a></li>
         </ul>
 
-        <img src="static/circle_logo.png">
+        <img src="circle_logo.png">
         <h2>External Links about me</h2>
         <ul>
             <li><a href="https://www.divenewswire.com/lionfish-hunter-padi-specialty-course-highlights-safe-hunting-practices-on-roatan/">DiveWire Lionfish</a></li>
