--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="static/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>What Would My Scuba Instructor Do?</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -120,7 +120,7 @@
 
         </ul>
 
-        <img src="static/circle_logo.png">
+        <img src="circle_logo.png">
         <h2>External Links about me</h2>
         <ul>
             <li><a href="https://www.divenewswire.com/lionfish-hunter-padi-specialty-course-highlights-safe-hunting-practices-on-roatan/">DiveWire Lionfish</a></li>
