--- a/index.html
+++ b/index.html
@@ -113,9 +113,8 @@
     <nav>
         <h2>Navigation</h2>
         <ul>
-            <li><a href="http://127.0.0.1:5000/shop">Go to Shop</a></li>
-            <li><a href="http://127.0.0.1:5000/contact">Contact Us</a></li>
-            <li><a href="http://127.0.0.1:5000/me">About Me</a></li>
+            <li><a href="me.html">Go to About Page</a></li>
+            <li><a href="me.html">Go to About Page</a></li>
             <li><a href="me.html">Go to About Page</a></li>
 
         </ul>
