--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <ul>
             <li><a href="me.html">Go to About Page</a></li>
             <li><a href="me.html">Go to About Page</a></li>
-            <li><a href="me.html">Go to About Page</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
 
         </ul>
 
