--- a/index.html
+++ b/index.html
@@ -114,8 +114,11 @@
         <h2>Navigation</h2>
         <ul>
             <li><a href="me.html">Go to About Page</a></li>
-            <li><a href="me.html">Go to About Page</a></li>
+            <li><a href="side.html">Shop</a></li>
             <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="store.html">store</a></li>
+            <li><a href="about.html">About</a></li>
 
         </ul>
 
