setting up to replace stuff

--- a/Photos/index2.html
+++ b/Photos/index2.html
@@ -89,7 +89,7 @@
 </head>
 <body>
     <header>
-        <h1>Lasers It</h1>
+        <h1>WWMSID</h1>
         <div class="container">
             <img src= "laser it.webp" alt="Sample Image">
         </div>
