--- a/Photos/index2.html
+++ b/Photos/index2.html
@@ -89,9 +89,9 @@
 </head>
 <body>
     <header>
-        <h1>WWMSID</h1>
+        <h1>Welcome to the shop</h1>
         <div class="container">
-            <img src= "laser it.webp" alt="Sample Image">
+            <img src= "red_logo.webp" alt="New Logo">
         </div>
     
     </header>
@@ -102,19 +102,19 @@
         <a href="contact.html">Contact</a>
     </nav>
     <div class="hero">
-        <h1>Wood Lasered Pictures</h1>
+        <h1>Mechandise</h1>
     </div>
     <div class="container">
         <section id="products" class="products">
             <div class="product">
-                <img src="test.jpg" alt="Product 1">
-                <h2>Product 1</h2>
-                <p>Description of Product 1</p>
+                <img src="lighter1.jpg" alt="Product 1">
+                <h2>Zippo with Full Cover</h2>
+                <p>Zippo lighters are known for their durability, reliability, and lifetime guarantee.</p>
             </div>
             <div class="product">
-                <img src="test.jpg" alt="Product 2">
+                <img src="zippo1.jpg" alt="Product 2">
                 <h2>Product 2</h2>
-                <p>Description of Product 2</p>
+                <p>Zippo lighters are known for their durability, reliability, and lifetime guarantee.</p>
             </div>
             <div class="product">
                 <img src="test.jpg" alt="Product 3">
