--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="store.html">store</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="/Photos/index2.html">test</a></li>
 
         </ul>
 
