--- a/Photos/index2.html
+++ b/Photos/index2.html
@@ -110,19 +110,22 @@
                 <img src="lighter1.jpg" alt="Product 1">
                 <h2>Zippo with Full Cover</h2>
                 <p>Zippo lighters are known for their durability, reliability, and lifetime guarantee.</p>
+                <h3>Price: $119.99</h3>
             </div>
             <div class="product">
                 <img src="zippo1.jpg" alt="Product 2">
-                <h2>Product 2</h2>
+                <h2>Zippo WWMSID</h2>
                 <p>Zippo lighters are known for their durability, reliability, and lifetime guarantee.</p>
+                <h3>Price: $119.99</h3>
             </div>
             <div class="product">
-                <img src="test.jpg" alt="Product 3">
+                <img src="green shirt.PNG" alt="Product 3">
                 <h2>Product 3</h2>
                 <p>Description of Product 3</p>
+                <h3>Price: $119.99</h3>
             </div>
             <div class="product">
-                <img src="test.jpg" alt="Product 1">
+                <img src="greenlost.PNG" alt="Product 1">
                 <h2>Product 1</h2>
                 <p>Description of Product 1</p>
             </div>
