putting photos on

--- a/Photos/index2.html
+++ b/Photos/index2.html
@@ -120,25 +120,45 @@
             </div>
             <div class="product">
                 <img src="green shirt.PNG" alt="Product 3">
-                <h2>Product 3</h2>
+                <h2>Freedive Green Shirt</h2>
                 <p>Description of Product 3</p>
-                <h3>Price: $119.99</h3>
+                <h3>Price: $89.99</h3>
             </div>
             <div class="product">
                 <img src="greenlost.PNG" alt="Product 1">
                 <h2>Product 1</h2>
                 <p>Description of Product 1</p>
+                <h3>Price: $119.99</h3>
             </div>
             <div class="product">
-                <img src="test.jpg" alt="Product 2">
+                <img src="shirt_blue.PNG" alt="Product 2">
                 <h2>Coming Soon</h2>
                 <p>Description of Product 2</p>
+                <h3>Price: $119.99</h3>
+            </div>
+            <div class="product">
+                <img src="tshirt red.PNG" alt="Product 3">
+                <h2>Product 3</h2>
+                <p>Description of Product 3</p>
+                <h3>Price: $119.99</h3>
+            </div>
+            <div class="product">
+                <img src="yellowshirt.PNG" alt="Product 3">
+                <h2>Product 3</h2>
+                <p>Description of Product 3</p>
+                <h3>Price: $119.99</h3>
             </div>
             <div class="product">
                 <img src="test.jpg" alt="Product 3">
                 <h2>Product 3</h2>
                 <p>Description of Product 3</p>
+                <h3>Price: $119.99</h3>
             </div>
+
+
+
+
+
         </section>
     </div>
     <footer>
