working on store page

--- a/Photos/index2.html
+++ b/Photos/index2.html
@@ -154,6 +154,18 @@
                 <p>Description of Product 3</p>
                 <h3>Price: $119.99</h3>
             </div>
+            <div class="product">
+                <img src="test.jpg" alt="Product 3">
+                <h2>Product 3</h2>
+                <p>Description of Product 3</p>
+                <h3>Price: $119.99</h3>
+            </div>
+            <div class="product">
+                <img src="test.jpg" alt="Product 3">
+                <h2>Product 3</h2>
+                <p>Description of Product 3</p>
+                <h3>Price: $119.99</h3>
+            </div>
 
 
 
