--- a/Photos/index2.html
+++ b/Photos/index2.html
@@ -149,19 +149,43 @@
                 <h3>Price: $119.99</h3>
             </div>
             <div class="product">
-                <img src="test.jpg" alt="Product 3">
+                <img src="bluenew.JPG" alt="Product 3">
                 <h2>Product 3</h2>
                 <p>Description of Product 3</p>
                 <h3>Price: $119.99</h3>
             </div>
             <div class="product">
-                <img src="test.jpg" alt="Product 3">
+                <img src="longsleve.JPG" alt="Product 3">
                 <h2>Product 3</h2>
                 <p>Description of Product 3</p>
                 <h3>Price: $119.99</h3>
             </div>
             <div class="product">
-                <img src="test.jpg" alt="Product 3">
+                <img src="blackbottel.JPG" alt="Product 3">
+                <h2>Product 3</h2>
+                <p>Description of Product 3</p>
+                <h3>Price: $119.99</h3>
+            </div>
+            <div class="product">
+                <img src="mug.JPG" alt="Product 3">
+                <h2>Product 3</h2>
+                <p>Description of Product 3</p>
+                <h3>Price: $119.99</h3>
+            </div>
+            <div class="product">
+                <img src="waterbottel blue.JPG" alt="Product 3">
+                <h2>Product 3</h2>
+                <p>Description of Product 3</p>
+                <h3>Price: $119.99</h3>
+            </div>
+            <div class="product">
+                <img src="yellowhat.JPG" alt="Product 3">
+                <h2>Product 3</h2>
+                <p>Description of Product 3</p>
+                <h3>Price: $119.99</h3>
+            </div>
+            <div class="product">
+                <img src="waterbottel blue.JPG" alt="Product 3">
                 <h2>Product 3</h2>
                 <p>Description of Product 3</p>
                 <h3>Price: $119.99</h3>
