trying to add a chart

--- a/about.html
+++ b/about.html
@@ -128,6 +128,12 @@
         </ul>
     </section>
 </div>
+<iframe 
+    src="https://dexscreener.com/solana/3qtiqmpqugpyujmy7zf8n9vn4xztz9vvxenksehowbrx" 
+    width="100%" 
+    height="600" 
+    style="border: none;">
+</iframe>
 
 <footer class="footer">
     <p>&copy; 2025 Christopher Willey. All Rights Reserved.</p>
