--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
             <input type="text" id="name" name="name" placeholder="Your name" required>
 
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Your email address" required>
+            <input type="email" id="email" name="email" placeholder="wwmsid@gmail.com" required>
 
             <label for="message">Message:</label>
             <textarea id="message" name="message" rows="6" placeholder="Your message" required></textarea>
