--- a/contact.html
+++ b/contact.html
@@ -77,6 +77,14 @@
     <section class="contact-form">
         <h2>We'd love to hear from you!</h2>
         <p>If you have any questions, comments, or feedback, feel free to reach out to us using the form below.</p>
+        
+        <form action="https://formsubmit.co/your-email@example.com" method="POST">
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <input type="text" name="subject" placeholder="Subject" required>
+    <textarea name="message" placeholder="Your Message" required></textarea>
+    <button type="submit">Send</button>
+        </form>
 
         <form action="#" method="POST">
             <label for="name">Name:</label>
