--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
         <h2>We'd love to hear from you!</h2>
         <p>If you have any questions, comments, or feedback, feel free to reach out to us using the form below.</p>
         
-        <form action="https://formsubmit.co/your-email@example.com" method="POST">
+        <form action="https://formsubmit.co/el/kexogu" method="POST">
     <input type="text" name="name" placeholder="Your Name" required>
     <input type="email" name="email" placeholder="Your Email" required>
     <input type="text" name="subject" placeholder="Subject" required>
