Update descriptions on store and edit links

--- a/store.html
+++ b/store.html
@@ -89,9 +89,9 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to the shop</h1>
+        <h1>Welcome to the Store</h1>
         <div class="container">
-            <img src= "red_logo.webp" alt="New Logo">
+            <img src= "Photos/red_logo.jpeg" alt="New Logo">
         </div>
     
     </header>
@@ -107,85 +107,84 @@
     <div class="container">
         <section id="products" class="products">
             <div class="product">
-                <img src="lighter1.jpg" alt="Product 1">
+                <img src="Photos/lighter1.jpg" alt="Product 1">
                 <h2>Zippo with Full Cover</h2>
                 <p>Zippo lighters are known for their durability, reliability, and lifetime guarantee.</p>
                 <h3>Price: $119.99</h3>
             </div>
             <div class="product">
-                <img src="zippo1.jpg" alt="Product 2">
+                <img src="Photos/zippo1.jpg" alt="Product 2">
                 <h2>Zippo WWMSID</h2>
                 <p>Zippo lighters are known for their durability, reliability, and lifetime guarantee.</p>
                 <h3>Price: $119.99</h3>
             </div>
             <div class="product">
-                <img src="green shirt.PNG" alt="Product 3">
-                <h2>Freedive Green Shirt</h2>
+                <img src="Photos/bluenew.JPG" alt="Product 3">
+                <h2>Blue Alt Logo T-Shirt</h2>
+                <p>T-Shirt Sizes S, M, L, XL</p>
+                <h3>Price: 99.99</h3>
+            </div>
+            <div class="product">
+                <img src="Photos/green shirt.PNG" alt="Product 3">
+                <h2>Freedive Green T-Shirt</h2>
+                <p>T-Shirt Sizes S, M, L, XL</p>
+                <h3>Price: $99.99</h3>
+            </div>
+            <div class="product">
+                <img src="Photos/shirt_blue.PNG" alt="Product 2">
+                <h2>Freedive Blue T-Shirt</h2>
+                <p>T-Shirt Sizes S, M, L, XL</p>
+                <h3>Price: $119.99</h3>
+            </div>
+            <div class="product">
+                <img src="Photos/greenlost.PNG" alt="Product 1">
+                <h2>Logo 3 T-Shirt Green</h2>
+                <p>T-Shirt Sizes S, M, L, XL</p>
+                <h3>Price: $119.99</h3>
+            </div>
+
+
+            <div class="product">
+                <img src="Photos/tshirt red.PNG" alt="Product 3">
+                <h2>Orange Disc Golf T-Shirt</h2>
+                <p>T-Shirt Sizes S, M, L, XL</p>
+                <h3>Price: $99.99</h3>
+            </div>
+            <div class="product">
+                <img src="Photos/yellowshirt.PNG" alt="Product 3">
+                <h2>Yellow T-Shirt</h2>
+                <p>T-Shirt Sizes S, M, L, XL</p>
+                <h3>Price: $119.99</h3>
+            </div>
+
+            <div class="product">
+                <img src="Photos/longsleve.JPG" alt="Product 3">
+                <h2>Long Sleeve</h2>
+                <p>Sizes S, M, L, XL</p>
+                <h3>Price: $119.99</h3>
+            </div>
+            <div class="product">
+                <img src="Photos/blackbottel.JPG" alt="Product 3">
+                <h2>Product 3</h2>
                 <p>Description of Product 3</p>
+                <h3>Price: $119.99</h3>
+            </div>
+            <div class="product">
+                <img src="Photos/mug.JPG" alt="Product 3">
+                <h2>Product 3</h2>
+                <p>Drink Coffee with our best Mug</p>
                 <h3>Price: $89.99</h3>
             </div>
+
             <div class="product">
-                <img src="greenlost.PNG" alt="Product 1">
-                <h2>Product 1</h2>
-                <p>Description of Product 1</p>
-                <h3>Price: $119.99</h3>
-            </div>
-            <div class="product">
-                <img src="shirt_blue.PNG" alt="Product 2">
-                <h2>Coming Soon</h2>
-                <p>Description of Product 2</p>
-                <h3>Price: $119.99</h3>
-            </div>
-            <div class="product">
-                <img src="tshirt red.PNG" alt="Product 3">
-                <h2>Product 3</h2>
+                <img src="Photos/waterbottel blue.JPG" alt="Product 3">
+                <h2>Water Bottle</h2>
                 <p>Description of Product 3</p>
                 <h3>Price: $119.99</h3>
+
             </div>
             <div class="product">
-                <img src="yellowshirt.PNG" alt="Product 3">
-                <h2>Product 3</h2>
-                <p>Description of Product 3</p>
-                <h3>Price: $119.99</h3>
-            </div>
-            <div class="product">
-                <img src="bluenew.JPG" alt="Product 3">
-                <h2>Product 3</h2>
-                <p>Description of Product 3</p>
-                <h3>Price: $119.99</h3>
-            </div>
-            <div class="product">
-                <img src="longsleve.JPG" alt="Product 3">
-                <h2>Product 3</h2>
-                <p>Description of Product 3</p>
-                <h3>Price: $119.99</h3>
-            </div>
-            <div class="product">
-                <img src="blackbottel.JPG" alt="Product 3">
-                <h2>Product 3</h2>
-                <p>Description of Product 3</p>
-                <h3>Price: $119.99</h3>
-            </div>
-            <div class="product">
-                <img src="mug.JPG" alt="Product 3">
-                <h2>Product 3</h2>
-                <p>Description of Product 3</p>
-                <h3>Price: $119.99</h3>
-            </div>
-            <div class="product">
-                <img src="waterbottel blue.JPG" alt="Product 3">
-                <h2>Product 3</h2>
-                <p>Description of Product 3</p>
-                <h3>Price: $119.99</h3>
-            </div>
-            <div class="product">
-                <img src="yellowhat.JPG" alt="Product 3">
-                <h2>Product 3</h2>
-                <p>Description of Product 3</p>
-                <h3>Price: $119.99</h3>
-            </div>
-            <div class="product">
-                <img src="waterbottel blue.JPG" alt="Product 3">
+                <img src="Photos/yellowhat.JPG" alt="Product 3">
                 <h2>Product 3</h2>
                 <p>Description of Product 3</p>
                 <h3>Price: $119.99</h3>
