--- a/gallery.html
+++ b/gallery.html
@@ -93,7 +93,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to the Store</h1>
+        <h1>Welcome to the Gallery</h1>
         <div class="container">
             <img src= "Photos/red_logo.jpeg" alt="New Logo">
         </div>
@@ -101,12 +101,13 @@
     </header>
     <nav>
         <a href="index.html">Home</a>
-        <a href="contact.html">About Us</a>
-        <a href="contact.html">Products</a>
-        <a href="contact.html">Contact</a>
+        <a href="store.html">Store</a>
+        <a href="me.html">About</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="contact.html">Contact Us</a>
     </nav>
     <div class="hero">
-        <h1>Mechandise</h1>
+        <h1>Gallery</h1>
     </div>
     <div class="container">
         <section id="products" class="products">
