--- a/index.html
+++ b/index.html
@@ -76,12 +76,10 @@
     
     <nav class="nav-container">
         <a href="index.html">Home</a>
-        <a href="me.html">About</a>
-        <a href="side.html">Shop</a>
-        <a href="contact.html">Contact</a>
         <a href="store.html">Store</a>
-        <a href="about.html">More About</a>
-        <a href="/Photos/index2.html">Gallery</a>
+        <a href="me.html">About</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="contact.html">Contact Us</a>
     </nav>
 
 
