--- a/gallery.html
+++ b/gallery.html
@@ -112,37 +112,34 @@
     <div class="container">
         <section id="products" class="products">
             <div class="product">
-                <img src="Photos/lighter1.jpg" alt="Product 1">
-                <h2>Zippo with Full Cover</h2>
-                <p>Zippo lighters are known for their durability, reliability, and lifetime guarantee.</p>
-                <h3>Price: $119.99</h3>
+                <img src="Gallery/1.JPG" alt="Product 1">
             </div>
             <div class="product">
-                <img src="Photos/zippo1.jpg" alt="Product 2">
+                <img src="Gallery/2.jpg" alt="Product 2">
                 <h2>Zippo WWMSID</h2>
                 <p>Zippo lighters are known for their durability, reliability, and lifetime guarantee.</p>
                 <h3>Price: $119.99</h3>
             </div>
             <div class="product">
-                <img src="Photos/bluenew.JPG" alt="Product 3">
+                <img src="Gallery/3.jpg" alt="Product 3">
                 <h2>Blue Alt Logo T-Shirt</h2>
                 <p>T-Shirt Sizes S, M, L, XL</p>
                 <h3>Price: 99.99</h3>
             </div>
             <div class="product">
-                <img src="Photos/green shirt.PNG" alt="Product 3">
+                <img src="Gallery/4.JPG" alt="Product 3">
                 <h2>Freedive Green T-Shirt</h2>
                 <p>T-Shirt Sizes S, M, L, XL</p>
                 <h3>Price: $99.99</h3>
             </div>
             <div class="product">
-                <img src="Photos/shirt_blue.PNG" alt="Product 2">
+                <img src="Gallery/5.JPG" alt="Product 2">
                 <h2>Freedive Blue T-Shirt</h2>
                 <p>T-Shirt Sizes S, M, L, XL</p>
                 <h3>Price: $119.99</h3>
             </div>
             <div class="product">
-                <img src="Photos/greenlost.PNG" alt="Product 1">
+                <img src="Gallery/6.JPG" alt="Product 1">
                 <h2>Logo 3 T-Shirt Green</h2>
                 <p>T-Shirt Sizes S, M, L, XL</p>
                 <h3>Price: $119.99</h3>
@@ -150,26 +147,26 @@
 
 
             <div class="product">
-                <img src="Photos/tshirt red.PNG" alt="Product 3">
+                <img src="Gallery/7.JPG" alt="Product 3">
                 <h2>Orange Disc Golf T-Shirt</h2>
                 <p>T-Shirt Sizes S, M, L, XL</p>
                 <h3>Price: $99.99</h3>
             </div>
             <div class="product">
-                <img src="Photos/yellowshirt.PNG" alt="Product 3">
+                <img src="Gallery/8.JPG" alt="Product 3">
                 <h2>Yellow T-Shirt</h2>
                 <p>T-Shirt Sizes S, M, L, XL</p>
                 <h3>Price: $119.99</h3>
             </div>
 
             <div class="product">
-                <img src="Photos/longsleve.JPG" alt="Product 3">
+                <img src="Gallery/9.JPG" alt="Product 3">
                 <h2>Long Sleeve</h2>
                 <p>Sizes S, M, L, XL</p>
                 <h3>Price: $119.99</h3>
             </div>
             <div class="product">
-                <img src="Photos/blackbottel.JPG" alt="Product 3">
+                <img src="Gallery/10.JPG" alt="Product 3">
                 <h2>Product 3</h2>
                 <p>Description of Product 3</p>
                 <h3>Price: $119.99</h3>
