--- a/contact.html
+++ b/contact.html
@@ -78,15 +78,9 @@
         <h2>We'd love to hear from you!</h2>
         <p>If you have any questions, comments, or feedback, feel free to reach out to us using the form below.</p>
         
-        <form action="https://formsubmit.co/wwmsid@gmail.com" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required>
-    <input type="email" name="email" placeholder="Your Email" required>
-    <input type="text" name="subject" placeholder="Subject" required>
-    <textarea name="message" placeholder="Your Message" required></textarea>
-    <button type="submit">Send</button>
-        </form>
 
-        <form action="#" method="POST">
+
+        <form action="https://formspree.io/f/xwplkven" method="POST">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" placeholder="Your name" required>
 
@@ -101,7 +95,7 @@
     </section>
 
     <footer style="margin-top: 20px; padding: 10px; background-color: #f1f1f1; width: 100%; text-align: center;">
-        <p>&copy; 2025 Christopher Willey. All Rights Reserved.</p>
+        <p>&copy; 2025 WWMSID. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
