--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <a href="store.html">Store</a>
         <a href="me.html">About</a>
         <a href="gallery.html">Gallery</a>
-        <a href="contact.html">Contact Us</a>
+        <a href="contact.html">Contact Us</a>        
     </nav>
 
 
@@ -113,6 +113,7 @@
         </section>
         <h2>External Links about me</h2>
         <ul>
+            <li><a href="https://www.facebook.com/WWMSID/">Facebook Page</a></li>
             <li><a href="https://www.divenewswire.com/lionfish-hunter-padi-specialty-course-highlights-safe-hunting-practices-on-roatan/">DiveWire Lionfish</a></li>
             <li><a href="https://www.thereminder.ca/local-news/ex-hapnot-student-now-battling-invasive-tropical-species-4139064">The Reminder Hapnot</a></li>
             <li><a href="https://www.deeperblue.com/padi-instructor-creates-lionfish-hunter-distinctive-specialty/">Deeper Blue Lionfish</a></li>
