--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,22 @@
             align-items: center;
             text-align: center;
         }
+        .nav-container {
+            display: flex;
+            justify-content: center;
+            background-color: #ff0000;
+            padding: 10px;
+        }
+
+        .nav-container a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 15px;
+        }
+
+        .nav-container a:hover {
+            text-decoration: underline;
+        }
 
         .banner {
             background-color: #00112D;
@@ -73,6 +89,13 @@
 </head>
 <body>
     <h1 class="banner">Contact Us</h1>
+    <nav class="nav-container">
+        <a href="index.html">Home</a>
+        <a href="store.html">Store</a>
+        <a href="me.html">About</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="contact.html">Contact Us</a>        
+    </nav>
 
     <section class="contact-form">
         <h2>We'd love to hear from you!</h2>
