--- a/contact.html
+++ b/contact.html
@@ -100,6 +100,8 @@
     <section class="contact-form">
         <h2>We'd love to hear from you!</h2>
         <p>If you have any questions, comments, or feedback, feel free to reach out to us using the form below.</p>
+        <p>If you are wanting to get in on the WWMSID Token airdrop let us know and we will respond for Sol Address. Use the Phantom Wallet for best results.
+        </p>
         
 
 
@@ -108,7 +110,7 @@
             <input type="text" id="name" name="name" placeholder="Your name" required>
 
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="wwmsid@gmail.com" required>
+            <input type="email" id="email" name="email" placeholder="wwmsid@your_email.com" required>
 
             <label for="message">Message:</label>
             <textarea id="message" name="message" rows="6" placeholder="Your message" required></textarea>
