--- a/crypto.html
+++ b/crypto.html
@@ -97,6 +97,10 @@
         <img src="Photos/red_logo.jpeg" alt="Image 2" class="circular-image">
         <img src="Photos/red_logo.jpeg" alt="Image 3" class="circular-image">
     </div>
+    <div= class="content-container">
+        <p>If you have purchased any WWMSID books or mechandise please fill out contact us form and once we can verify your purchase, we will airdrop you WWMSID Tokens. <br>Price of WWMSID Tokens is 5000 WWMSID = 1 USD in store. </p>
+
+    </div>
         
 
     
