--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <nav class="nav-container">
         <a href="index.html">Home</a>
         <a href="store.html">Store</a>
-        <a href="me.html">About</a>
+        <a href="aboutme.html">About</a>
         <a href="gallery.html">Gallery</a>
         <a href="contact.html">Contact Us</a>        
     </nav>
