--- a/aboutme.html
+++ b/aboutme.html
@@ -75,7 +75,7 @@
     
     <div class="nav-container">
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="aboutme.html">About</a>
         <a href="store.html">Store</a>
         <a href="contact.html">Contact</a>
         <a href="crypto.html">Crypto</a>
