--- a/store.html
+++ b/store.html
@@ -101,7 +101,7 @@
     </header>
     <nav>
         <a href="index.html">Home</a>
-        <a href="contact.html">About Us</a>
+        <a href="aboutme.html">About Me</a>
         <a href="contact.html">Products</a>
         <a href="contact.html">Contact</a>
     </nav>
