--- a/index.html
+++ b/index.html
@@ -6,13 +6,21 @@
     <title>What Would My Scuba Instructor Do?</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
-        body {
+        /* body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             text-align: center;
+        } */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
         }
-
         .banner {
             background-color: #00112D;
             color: white;
