--- a/contact.html
+++ b/contact.html
@@ -4,88 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
     <title>Contact Us - WWMSID</title>
 
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-        }
-        .nav-container {
-            display: flex;
-            justify-content: center;
-            background-color: #ff0000;
-            padding: 10px;
-        }
 
-        .nav-container a {
-            color: white;
-            text-decoration: none;
-            padding: 10px 15px;
-        }
-
-        .nav-container a:hover {
-            text-decoration: underline;
-        }
-
-        .banner {
-            background-color: #00112D;
-            color: white;
-            padding: 15px;
-            margin: 0;
-            width: 100%;
-            text-align: center;
-        }
-
-        .contact-form {
-            margin: 20px;
-            padding: 15px;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            width: 90%;
-            max-width: 800px;
-            background-color: #f9f9f9;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-            align-items: stretch;
-        }
-
-        label {
-            font-weight: bold;
-            margin: 10px 0 5px;
-        }
-
-        input, textarea {
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            width: 100%;
-            box-sizing: border-box;
-        }
-
-        .button {
-            background-color: #0073e6;
-            color: #fff;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .button:hover {
-            background-color: #005bb5;
-        }
-    </style>
 </head>
 <body>
     <h1 class="banner">Contact Us</h1>
