--- a/contact.html
+++ b/contact.html
@@ -1,49 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
-    <title>Contact Us - WWMSID</title>
-
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact Us - WWMSID</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1 class="banner">Contact Us</h1>
-    
-    <nav class="nav-container">
-        <a href="index.html">Home</a>
-        <a href="store.html">Store</a>
-        <a href="aboutme.html">About</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="contact.html">Contact Us</a>        
-    </nav>
-
+  <header class="banner">
+    <h1>Contact Us</h1>
+  </header>
+  <nav class="nav-container">
+    <a href="index.html">Home</a>
+    <a href="store.html">Store</a>
+    <a href="aboutme.html">About</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="contact.html">Contact</a>
+    <a href="crypto.html">Crypto</a>
+  </nav>
+  <div class="content-container">
     <section class="contact-form">
-        <h2>We'd love to hear from you!</h2>
-        <p>If you have any questions, comments, or feedback, feel free to reach out to us using the form below.</p>
-        <p>If you are wanting to get in on the WWMSID Token airdrop let us know and we will respond for Sol Address. Use the Phantom Wallet for best results.
-        </p>
-        
-
-
-        <form action="https://formspree.io/f/xwplkven" method="POST">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" placeholder="Your name" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="wwmsid@your_email.com" required>
-
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="6" placeholder="Your message" required></textarea>
-
-            <button type="submit" class="button">Submit</button>
-        </form>
+      <h2>We'd love to hear from you!</h2>
+      <p>
+        If you have any questions, comments, or feedback, feel free to reach out using the form below.
+      </p>
+      <p>
+        If you're interested in the WWMSID Token airdrop, let us know and we will respond for Sol Address. (Use the Phantom Wallet for best results.)
+      </p>
+      <form action="https://formspree.io/f/xwplkven" method="POST">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Your name" required />
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="wwmsid@your_email.com" required />
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="6" placeholder="Your message" required></textarea>
+        <button type="submit" class="button">Submit</button>
+      </form>
     </section>
-
-    <footer style="margin-top: 20px; padding: 10px; background-color: #f1f1f1; width: 100%; text-align: center;">
-        <p>&copy; 2025 WWMSID. All Rights Reserved.</p>
-    </footer>
+  </div>
+  <footer>
+    <p>&copy; 2025 WWMSID. All Rights Reserved.</p>
+  </footer>
 </body>
 </html>
