--- a/store.html
+++ b/store.html
@@ -90,22 +90,18 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to the Store</h1>
-        <div class="container">
-            
-        </div>
-    
-    </header>
-    <nav>
+    <header class="banner">
+        <h1>WWMSID Mechandise</h1>
+      </header>
+      <nav class="nav-container">
         <a href="index.html">Home</a>
-        <a href="aboutme.html">About Me</a>
-        <a href="contact.html">Products</a>
+        <a href="store.html">Store</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="aboutme.html">About</a>
+        <a href="crypto.html">Crypto</a>
         <a href="contact.html">Contact</a>
-    </nav>
-    <div class="hero">
-        <h1>Mechandise</h1>
-    </div>
+      </nav>
+
     <div class="container">
         <section id="products" class="products">
             <div class="product">
