--- a/store.html
+++ b/store.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasers It</title>
+    <title>WWMSID - Store</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         body {
@@ -134,6 +134,13 @@
                 <h2>05 Sabatian Bear</h2>
                 <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
                 <h3>Price: $449.99</h3>
+            </div>
+            <div class="product">
+                <img src="Photos/band3.jpg" alt="Product 1">
+                <h2>Original WWMSID Bands</h2>
+                <p>The original band come with a keychain adapter.</p>
+                <h3>Price: $20.00</h3>
+            </div>
             
             
             <div class="product">
