--- a/store.html
+++ b/store.html
@@ -136,6 +136,29 @@
                 <h3>Price: $449.99</h3>
             </div>
             <div class="product">
+                <img src="Photos/funko6.png" alt="Product 3">
+                <h2>06 Wild Willey</h2>
+                <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
+                <h3>Price: $449.99</h3>
+            </div>
+            <div class="product">
+                <img src="Photos/funko7.png" alt="Product 3">
+                <h2>07 Smokie</h2>
+                <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
+                <h3>Price: $449.99</h3>
+            </div>
+            <div class="product">
+                <img src="Photos/funko8.png" alt="Product 3">
+                <h2>08 WWMSID</h2>
+                <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
+                <h3>Price: $449.99</h3>
+            </div>
+
+
+
+
+
+            <div class="product">
                 <img src="Photos/band3.jpg" alt="Product 1">
                 <h2>Original WWMSID Bands</h2>
                 <p>The original band come with a keychain adapter.</p>
