added new photo

--- a/store.html
+++ b/store.html
@@ -160,6 +160,7 @@
 
             <div class="product">
                 <img src="Photos/band3.jpg" alt="Product 1">
+                <img src="Photos/band 2.jpg" alt="Product 1">
                 <h2>Original WWMSID Bands</h2>
                 <p>The original band come with a keychain adapter.</p>
                 <h3>Price: $20.00</h3>
