--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasers It</title>
+    <title>WWMSID - Gallery</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         body {
@@ -92,21 +92,16 @@
 <body>
     <header>
         <h1>Welcome to the Gallery</h1>
-        <div class="container">
-            <img src= "Photos/red_logo.jpeg" alt="New Logo">
-        </div>
-    
+            
     </header>
-    <nav>
+    <nav class="nav-container">
         <a href="index.html">Home</a>
         <a href="store.html">Store</a>
-        <a href="me.html">About</a>
         <a href="gallery.html">Gallery</a>
-        <a href="contact.html">Contact Us</a>
-    </nav>
-    <div class="hero">
-        <h1>Gallery</h1>
-    </div>
+        <a href="aboutme.html">About</a>
+        <a href="crypto.html">Crypto</a>
+        <a href="contact.html">Contact</a>
+      </nav>   
     <div class="container">
         <section id="products" class="products">
             <div class="product">
