--- a/store.html
+++ b/store.html
@@ -153,6 +153,11 @@
                 <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
                 <h3>Price: $449.99</h3>
             </div>
+            <div class="product">
+                <img src="Photos/funko9.png" alt="Product 3">
+                <h2>09 Dive Against Debris</h2>
+                <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
+                <h3>Price: $449.99</h3>
 
 
 
