--- a/store.html
+++ b/store.html
@@ -158,6 +158,7 @@
                 <h2>09 Dive Against Debris</h2>
                 <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
                 <h3>Price: $449.99</h3>
+            </div>
 
 
 
