added new photos to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -144,6 +144,61 @@
                 <img src="Gallery/10.JPG" alt="Product 3">
                 <p>Dive Against Debris - with David</p>
             </div>
+            <div class="product">
+                <img src="Gallery/gal (1).jpg" alt="Product 3">
+                <p>Dive Against Debris - with David</p>
+
+
+            </div>
+            <div class="product">
+                <img src="Gallery/gal (2).jpg" alt="Product 3">
+                <p>Dive Against Debris - with David</p>
+            </div>
+            <div class="product">
+                <img src="Gallery/gal (3).jpg" alt="Product 3">
+                <p>Dive Against Debris - with David</p>
+            </div>
+            <div class="product">
+                <img src="Gallery/gal (4).jpg" alt="Product 3">
+                <p>Dive Against Debris - with David</p>
+            </div>
+            <div class="product">
+                <img src="Gallery/gal (5).jpg" alt="Product 3">
+                <p>Dive Against Debris - with David</p>
+            </div>
+            <div class="product">
+                <img src="Gallery/gal (6).jpg" alt="Product 3">
+                <p>Dive Against Debris - with David</p>
+            </div>
+            <div class="product">
+                <img src="Gallery/gal (7).jpg" alt="Product 3">
+                <p>Dive Against Debris - with David</p>
+            </div>
+            <div class="product">
+                <img src="Gallery/gal (8).jpg" alt="Product 3">
+                <p>Dive Against Debris - with David</p>
+            </div>
+            <div class="product">
+                <img src="Gallery/gal (9).jpg" alt="Product 3">
+                <p>Dive Against Debris - with David</p>
+            </div>
+            <div class="product">
+                <img src="Gallery/gal (10).jpg" alt="Product 3">
+                <p>Dive Against Debris - with David</p>
+            </div>
+            <div class="product">
+                <img src="Gallery/gal (11).jpg" alt="Product 3">
+                <p>Dive Against Debris - with David</p>
+            </div>
+            <div class="product">
+                <img src="Gallery/gal (12).jpg" alt="Product 3">
+                <p>Dive Against Debris - with David</p>
+            </div>
+            
+
+
+
+
         </section>
     </div>
     <footer>
