--- a/store.html
+++ b/store.html
@@ -251,6 +251,11 @@
                 <p>Truck Driver hat</p>
                 <h3>Price: $109.99</h3>
             </div>
+            <div class="product">
+                <img src="Photos/toy.png" alt="Product 3">
+                <h2>Disc Golf Toy</h2>
+                <p>Disc Golf Vintage Toy</p>
+                <h3>Price: $1009.99</h3>
         </section>
     </div>
     <footer>
