--- a/gallery.html
+++ b/gallery.html
@@ -168,33 +168,33 @@
             </div>
             <div class="product">
                 <img src="Gallery/gal (6).jpg" alt="Product 3">
-                <p>Dive Against Debris - with David</p>
+                <p>This was during our divemaster party. To find out what lead me to being in a bar with no pants on you gotta buy </p>
             </div>
             <div class="product">
                 <img src="Gallery/gal (7).jpg" alt="Product 3">
-                <p>Dive Against Debris - with David</p>
+                <p>My hair is sun bleached and i am trying to fiberglass a broken ladder</p>
             </div>
             <div class="product">
                 <img src="Gallery/gal (8).jpg" alt="Product 3">
-                <p>Dive Against Debris - with David</p>
+                <p>I have my camera and a bottle of nitrox. Good Times ahead.</p>
             </div>
             <div class="product">
                 <img src="Gallery/gal (9).jpg" alt="Product 3">
-                <p>Dive Against Debris - with David</p>
+                <p>Sidemount with my new mask</p>
             </div>
             <div class="product">
                 <img src="Gallery/gal (10).jpg" alt="Product 3">
-                <p>Dive Against Debris - with David</p>
+                <p>Sidemount Diving for Lionfish</p>
             </div>
             <div class="product">
                 <img src="Gallery/gal (11).jpg" alt="Product 3">
-                <p>Dive Against Debris - with David</p>
+                <p>I found a seastar before I knew better not to touch</p>
             </div>
             <div class="product">
                 <img src="Gallery/gal (12).jpg" alt="Product 3">
-                <p>Dive Against Debris - with David</p>
+                <p>Disc Golfing in Anahiem with my luckey bear</p>
             </div>
-            
+
 
 
 
