--- a/gallery.html
+++ b/gallery.html
@@ -146,29 +146,32 @@
             </div>
             <div class="product">
                 <img src="Gallery/gal (1).jpg" alt="Product 3">
-                <p>Dive Against Debris - with David</p>
+                <p>Commerical diving. I worked at the cruiseship port </p>
 
 
             </div>
             <div class="product">
                 <img src="Gallery/gal (2).jpg" alt="Product 3">
-                <p>Dive Against Debris - with David</p>
+                <p>Trevor and Me with father and son.</p>
             </div>
             <div class="product">
                 <img src="Gallery/gal (3).jpg" alt="Product 3">
-                <p>Dive Against Debris - with David</p>
+                <p>Diving Saskatoons Diving Center</p>
             </div>
             <div class="product">
                 <img src="Gallery/gal (4).jpg" alt="Product 3">
-                <p>Dive Against Debris - with David</p>
+                <p>REEF.org made a picture on their website. To say nice things. But the photo they used was from teaching
+                    divemaster, I was being the bad student and my divemaster candidate didn't inspect my gear. I have my gear backwords. I have to use octo because my main cannot reach my mouth.
+                </p>
             </div>
             <div class="product">
                 <img src="Gallery/gal (5).jpg" alt="Product 3">
-                <p>Dive Against Debris - with David</p>
+                <p>This was our lionfish team for a lionfish derby in Roatan I think we got 4th place.</p>
             </div>
             <div class="product">
                 <img src="Gallery/gal (6).jpg" alt="Product 3">
-                <p>This was during our divemaster party. To find out what lead me to being in a bar with no pants on you gotta buy </p>
+                <p>This was during our divemaster party. To find out what lead me to being in a bar with no pants on 
+                    you gotta buy WWMSID</p>
             </div>
             <div class="product">
                 <img src="Gallery/gal (7).jpg" alt="Product 3">
