--- a/store.html
+++ b/store.html
@@ -159,6 +159,48 @@
                 <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
                 <h3>Price: $449.99</h3>
             </div>
+            <div class="product">
+                <img src="Photos/funko10.png" alt="Product 3">
+                <h2>10 Dive Against Debris</h2>
+                <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
+                <h3>Price: $449.99</h3>
+            </div>
+            <div class="product">
+                <img src="Photos/funko11.png" alt="Product 3">
+                <h2>11 Dive Against Debris</h2>
+                <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
+                <h3>Price: $449.99</h3>
+            </div>
+            <div class="product">
+                <img src="Photos/funko12.png" alt="Product 3">
+                <h2>12 Dive Against Debris</h2>
+                <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
+                <h3>Price: $449.99</h3>
+            </div>
+            <div class="product">
+                <img src="Photos/funko13.png" alt="Product 3">
+                <h2>13 Dive Against Debris</h2>
+                <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
+                <h3>Price: $449.99</h3>
+            </div>
+            <div class="product">
+                <img src="Photos/funko14.png" alt="Product 3">
+                <h2>14 Dive Against Debris</h2>
+                <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
+                <h3>Price: $449.99</h3>
+            </div>
+            <div class="product">
+                <img src="Photos/funko15.png" alt="Product 3">
+                <h2>15 Dive Against Debris</h2>
+                <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
+                <h3>Price: $449.99</h3>
+            </div>
+            <div class="product">
+                <img src="Photos/funko16.png" alt="Product 3">
+                <h2>16 Dive Against Debris</h2>
+                <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
+                <h3>Price: $449.99</h3>
+            </div>
 
 
 
