bad files removed

--- a/gallery.html
+++ b/gallery.html
@@ -182,7 +182,7 @@
                 <p>I have my camera and a bottle of nitrox. Good Times ahead.</p>
             </div>
             <div class="product">
-                <img src="Gallery/gal (9).jpg" alt="Product 3">
+                <img src="Gallery/gal (9).jpeg" alt="Product 3">
                 <p>Sidemount with my new mask</p>
             </div>
             <div class="product">
