--- a/store.html
+++ b/store.html
@@ -161,42 +161,48 @@
             </div>
             <div class="product">
                 <img src="Photos/funko10.png" alt="Product 3">
-                <h2>10 Dive Against Debris</h2>
+                <h2>10 Chris & Poncho</h2>
                 <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
                 <h3>Price: $449.99</h3>
             </div>
             <div class="product">
                 <img src="Photos/funko11.png" alt="Product 3">
-                <h2>11 Dive Against Debris</h2>
+                <h2>11 Chris & Toy Monkey</h2>
                 <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
                 <h3>Price: $449.99</h3>
             </div>
             <div class="product">
                 <img src="Photos/funko12.png" alt="Product 3">
-                <h2>12 Dive Against Debris</h2>
+                <h2>12 Dive Breifing</h2>
                 <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
                 <h3>Price: $449.99</h3>
             </div>
             <div class="product">
                 <img src="Photos/funko13.png" alt="Product 3">
-                <h2>13 Dive Against Debris</h2>
+                <h2>13 Great Finds from Mega Paca</h2>
                 <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
                 <h3>Price: $449.99</h3>
             </div>
             <div class="product">
                 <img src="Photos/funko14.png" alt="Product 3">
-                <h2>14 Dive Against Debris</h2>
+                <h2>14 Chris & Sloth</h2>
                 <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
                 <h3>Price: $449.99</h3>
             </div>
             <div class="product">
                 <img src="Photos/funko15.png" alt="Product 3">
-                <h2>15 Dive Against Debris</h2>
+                <h2>15 Lionfish Hunter 2</h2>
                 <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
                 <h3>Price: $449.99</h3>
             </div>
             <div class="product">
                 <img src="Photos/funko16.png" alt="Product 3">
+                <h2>16 Bird</h2>
+                <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
+                <h3>Price: $449.99</h3>
+            </div>
+            <div class="product">
+                <img src="Photos/funko_17.png" alt="Product 3">
                 <h2>16 Dive Against Debris</h2>
                 <p>Funko Pop collectibles are vinyl figurines of characters from pop culture, movies, and real life</p>
                 <h3>Price: $449.99</h3>
