--- a/store.html
+++ b/store.html
@@ -283,10 +283,16 @@
             </div>
             <div class="product">
                 <img src="Photos/mug.JPG" alt="Product 3">
-                <h2>Product 3</h2>
+                <h2>coffee_mug</h2>
                 <p>Drink Coffee with our best Mug</p>
                 <h3>Price: $89.99</h3>
             </div>
+            <div class="product">
+                <img src="Photos/coffee_mug.png" alt="Product 3">
+                <h2>Coffee mug</h2>
+                <p>2ND best mug</p>
+                <h3>Price: $109.99</h3>
+            
             <div class="product">
                 <img src="Photos/waterbottel blue.JPG" alt="Product 3">
                 <h2>Water Bottle</h2>
